# arduino-libvorbis-tremor

./: CMakeLists.txt  README.md  library.properties  misc.h
src/: vorbis-tremor.h
src/tremor/: README  iseeking_example.c  ivorbisfile_example.c  library.properties  sharedbook.c
src/tremor-lowmem/: bitwise.c  custom_ogg.h  framing.c  ivorbisfile_example.c  ogg.h
